force-app/main/default/objects/Project__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>Project ID for the project object</description>
    <displayFormat>Proj-{0000}</displayFormat>
    <label>Project ID</label>
    <type>AutoNumber</type>
</CustomField>