force-app/main/default/objects/Project__c/fields/Solutions_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Architect__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Name of the SA assigned to the project.</description>
    <label>Solutions Architect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>